fix(doc): fix wrong width in mobile devices

--- a/packages/doc/src/components/Overview/styles.module.css
+++ b/packages/doc/src/components/Overview/styles.module.css
@@ -29,7 +29,6 @@
   justify-content: space-around;
   margin-top: 60px;
   margin-bottom: 84px;
-  width: 100%;
 }
 
 .feature {
